[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/mod_tool/interface/create_mod/create_mod.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/mod_tool/interface/manifest_editor/manifest_editor.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/mod_tool/interface/panel/tools_panel.gd" type="Script" id=3]
[ext_resource path="res://addons/mod_tool/interface/global/input_string.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/mod_tool/interface/get_7zip/get_7zip.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/mod_tool/interface/global/input_options.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/mod_tool/interface/global/directory_selection/select_directory.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/mod_tool/interface/global/input_string_with_button.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="InputEventKey" id=1]
control = true
meta = true
command = true
scancode = 67
unicode = 67

[sub_resource type="ShortCut" id=12]
resource_name = "Copy Selection"
shortcut = SubResource( 1 )
__meta__ = {
"original": SubResource( 1 )
}

[sub_resource type="InputEventKey" id=3]
shift = true
control = true
meta = true
command = true
scancode = 75
unicode = 75

[sub_resource type="ShortCut" id=13]
resource_name = "Clear Output"
shortcut = SubResource( 3 )
__meta__ = {
"original": SubResource( 3 )
}

[node name="ModToolsPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Panel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -6.0
margin_right = 4.0
margin_bottom = 4.0

[node name="VSplit" type="VSplitContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1025.0
margin_bottom = 603.0

[node name="TabContainer" type="TabContainer" parent="Panel/VSplit"]
unique_name_in_owner = true
margin_right = 1018.0
margin_bottom = 370.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 14 )
tab_align = 0

[node name="Manifest Editor" parent="Panel/VSplit/TabContainer" instance=ExtResource( 2 )]
margin_top = 24.0

[node name="Export" type="PanelContainer" parent="Panel/VSplit"]
margin_top = 382.0
margin_right = 1018.0
margin_bottom = 596.0

[node name="HSplit" type="HSplitContainer" parent="Panel/VSplit/Export"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1011.0
margin_bottom = 207.0

[node name="Console" type="VBoxContainer" parent="Panel/VSplit/Export/HSplit"]
visible = false
margin_right = 1264.0
margin_bottom = 1026.0
rect_pivot_offset = Vector2( -230, -400 )
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="Panel/VSplit/Export/HSplit/Console"]
margin_right = 1264.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="Panel/VSplit/Export/HSplit/Console/HBox"]
margin_top = 3.0
margin_right = 1169.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Output:"

[node name="CopyOutput" type="Button" parent="Panel/VSplit/Export/HSplit/Console/HBox"]
margin_left = 1173.0
margin_right = 1216.0
margin_bottom = 20.0
shortcut = SubResource( 12 )
text = "Copy"

[node name="ClearOutput" type="Button" parent="Panel/VSplit/Export/HSplit/Console/HBox"]
margin_left = 1220.0
margin_right = 1264.0
margin_bottom = 20.0
shortcut = SubResource( 13 )
text = "Clear"

[node name="Output" type="RichTextLabel" parent="Panel/VSplit/Export/HSplit/Console"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 1264.0
margin_bottom = 1026.0
focus_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="Settings" type="HBoxContainer" parent="Panel/VSplit/Export/HSplit"]
margin_right = 692.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 0 )
rect_pivot_offset = Vector2( -1685, 180 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="VBox" type="VBoxContainer" parent="Panel/VSplit/Export/HSplit/Settings"]
margin_right = 692.0
margin_bottom = 200.0
size_flags_horizontal = 3

[node name="Category" type="LineEdit" parent="Panel/VSplit/Export/HSplit/Settings/VBox"]
margin_right = 692.0
margin_bottom = 24.0
mouse_filter = 2
mouse_default_cursor_shape = 0
text = "Export"
align = 1
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="ModId" parent="Panel/VSplit/Export/HSplit/Settings/VBox" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 28.0
margin_right = 692.0
margin_bottom = 60.0
hint_tooltip = "ID of the mod to be exported.
Format: Namespace-ModName
(Often Author-ModName)"
mouse_default_cursor_shape = 16
is_required = true
label_text = "Mod ID"
editor_icon_name = ""
hint_text = "ID of the mod to be exported.
Format: Namespace-ModName
(Often Author-ModName)"
is_editable = false
input_text = "Test-Test"

[node name="ExportType" parent="Panel/VSplit/Export/HSplit/Settings/VBox" instance=ExtResource( 6 )]
unique_name_in_owner = true
visible = false
anchor_right = 0.0
margin_top = 64.0
margin_right = 692.0
margin_bottom = 96.0
is_required = true
key = "export_type"
label_text = "Export Type"
input_options = PoolStringArray( "Steam Workshop", "Thunderstore" )

[node name="ExportPath" parent="Panel/VSplit/Export/HSplit/Settings/VBox" instance=ExtResource( 8 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 64.0
margin_right = 692.0
margin_bottom = 96.0
hint_tooltip = "The directory to which the final mod zip is exported."
mouse_default_cursor_shape = 16
is_required = true
key = "path_export_dir"
label_text = "Export Path"
hint_text = "The directory to which the final mod zip is exported."
input_text = "C:/Users/Kai/Documents/godot/Brotato/mods/Mods/exports"

[node name="Align" type="HBoxContainer" parent="Panel/VSplit/Export/HSplit/Settings/VBox"]
margin_top = 100.0
margin_right = 692.0
margin_bottom = 120.0
alignment = 2

[node name="ExportStatus" type="Label" parent="Panel/VSplit/Export/HSplit/Settings/VBox/Align"]
unique_name_in_owner = true
margin_left = 498.0
margin_top = 3.0
margin_right = 604.0
margin_bottom = 17.0
text = "Export Status OK"

[node name="Export" type="Button" parent="Panel/VSplit/Export/HSplit/Settings/VBox/Align"]
margin_left = 608.0
margin_right = 692.0
margin_bottom = 20.0
text = "Export Mod"

[node name="VBox" type="VBoxContainer" parent="Panel/VSplit/Export/HSplit"]
margin_left = 704.0
margin_right = 1004.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 0 )

[node name="Category" type="LineEdit" parent="Panel/VSplit/Export/HSplit/VBox"]
margin_right = 300.0
margin_bottom = 24.0
mouse_filter = 2
mouse_default_cursor_shape = 0
text = "More Actions"
align = 1
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="CreateMod" type="Button" parent="Panel/VSplit/Export/HSplit/VBox"]
margin_top = 28.0
margin_right = 300.0
margin_bottom = 48.0
text = "Create new Mod"

[node name="ConnectMod" type="Button" parent="Panel/VSplit/Export/HSplit/VBox"]
margin_top = 52.0
margin_right = 300.0
margin_bottom = 72.0
text = "Connect existing Mod"

[node name="LinkMod" type="Button" parent="Panel/VSplit/Export/HSplit/VBox"]
margin_top = 76.0
margin_right = 300.0
margin_bottom = 96.0
text = "Link existing Mod"

[node name="Get7Zip" parent="Panel/VSplit/Export/HSplit/VBox" instance=ExtResource( 5 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 300.0
margin_bottom = 200.0

[node name="CreateMod" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 20.0
margin_right = 340.0
margin_bottom = 73.0
rect_min_size = Vector2( 500, 280 )

[node name="SelectMod" parent="." instance=ExtResource( 7 )]
unique_name_in_owner = true
window_title = "Connect existing Mod"

[node name="SelectModTemplate" parent="." instance=ExtResource( 7 )]
unique_name_in_owner = true
window_title = "Select Mod Template"

[node name="FileDialogExport" type="FileDialog" parent="."]
unique_name_in_owner = true
margin_right = 600.0
margin_bottom = 350.0
rect_min_size = Vector2( 600, 350 )
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2

[node name="FileDialogLinkMod" type="FileDialog" parent="."]
unique_name_in_owner = true
margin_right = 600.0
margin_bottom = 350.0
rect_min_size = Vector2( 600, 350 )
window_title = "Open Mod Directory"
resizable = true
mode = 2
access = 2

[connection signal="pressed" from="Panel/VSplit/Export/HSplit/Console/HBox/CopyOutput" to="." method="_on_copy_output_pressed"]
[connection signal="pressed" from="Panel/VSplit/Export/HSplit/Console/HBox/ClearOutput" to="." method="_on_clear_output_pressed"]
[connection signal="button_pressed" from="Panel/VSplit/Export/HSplit/Settings/VBox/ExportPath" to="." method="_on_ButtonExportPath_pressed"]
[connection signal="pressed" from="Panel/VSplit/Export/HSplit/Settings/VBox/Align/Export" to="." method="_on_export_pressed"]
[connection signal="pressed" from="Panel/VSplit/Export/HSplit/VBox/CreateMod" to="." method="_on_export_settings_create_new_mod_pressed"]
[connection signal="pressed" from="Panel/VSplit/Export/HSplit/VBox/ConnectMod" to="." method="_on_ConnectMod_pressed"]
[connection signal="pressed" from="Panel/VSplit/Export/HSplit/VBox/LinkMod" to="." method="_on_LinkMod_pressed"]
[connection signal="installed" from="Panel/VSplit/Export/HSplit/VBox/Get7Zip" to="." method="_on_Get7Zip_installed"]
[connection signal="mod_dir_created" from="CreateMod" to="." method="_on_CreateMod_mod_dir_created"]
[connection signal="dir_selected" from="SelectMod" to="." method="_on_SelectMod_dir_selected"]
[connection signal="dir_selected" from="FileDialogExport" to="." method="_on_FileDialogExport_dir_selected"]
[connection signal="dir_selected" from="FileDialogLinkMod" to="." method="_on_FileDialogLinkMod_dir_selected"]
